youfull/objects/Request_Handler__c.object
<CustomObject>
    <description>This Object is responsible to handle any request like User activation request prior login to ALM.</description>
    <fields>
        <fullName>ALM_User__c</fullName>
        <label>ALM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Handlers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALM_User_email__c</fullName>
        <label>ALM User email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>System/User will write comments</description>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Key field to discriminate the request type.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>To distinguish the type of request</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User Activation Request</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Request Handler</label>
    <nameField>
        <displayFormat>RH-{00000}</displayFormat>
        <label>RH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Handlers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>